--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ __pycache__
 *.ipynb_checkpoints
 
 # Big Datasets
+verybig-gaussians-6centers.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
