--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ __pycache__
 *.ipynb_checkpoints
 
 # Big Datasets
-verybig-gaussians-6centers.csv
+verybig-gaussians-6centers*
+xtrabig-gaussians-6centers*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
